Strapline overflow fix

--- a/less/narrative.less
+++ b/less/narrative.less
@@ -42,6 +42,8 @@
     display: block;
     margin-right: @icon-size + (@item-padding * 2);
     padding: @item-padding;
+    overflow: hidden;
+    text-overflow: ellipsis;
     // Override button line height to match icon size
     line-height: @icon-size;
 
